--- a/brand_safety_manager.permissions.yml
+++ b/brand_safety_manager.permissions.yml
@@ -1,3 +1,3 @@
 administer brand safety keywords:
   title: 'Administer Brand Safety Keywords'
-  description: 'Manage the list of brand safety keywords.'
+  description: 'Allows access to manage keyword listing and import CSV.'
